idf_component_register( SRCS    main.c
                                sensor.c
                                ui_sensor.c
                                icon/light.c
                                icon/mems.c
                                icon/temp_humid.c
                        INCLUDE_DIRS include)
