
idf_component_register(
    SRC_DIRS
        "src/boards"
        "src/peripherals"
        "src/storage"
        "src/indev"
        "src/codec"
        "src/calibration"
        "src/calibration/basic_painter"
    INCLUDE_DIRS
        "src/boards"
        "src"
        "include"
        "src/calibration"
    REQUIRES
        iot_button
        esp_hid
        esp_lcd
        fatfs
        bus
        i2c_devices
        nvs_flash
        spiffs)
